k8s/my-ldap-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ldap-dashboard
  namespace: petra-iam
spec:
  type: ClusterIP
  selector:
    app: my-ldap-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 80
